<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.dta_android_calculatrice.MainActivity">

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="130dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="2dp">

        <TextView
            android:id="@+id/tv_stack_quatre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/tv_stack_quatre"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="2dp" />

        <TextView
            android:id="@+id/tv_stack_trois"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/tv_stack_trois"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="34dp" />

        <TextView
            android:id="@+id/tv_stack_deux"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/tv_stack_deux"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="66dp" />

        <TextView
            android:id="@+id/tv_stack_un"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.89"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/tv_stack_un"
            tools:layout_editor_absoluteX="65dp"
            tools:layout_editor_absoluteY="93dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_affiche_resultat"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:background="@android:color/darker_gray"
        android:text="@string/tv_affiche_resultat"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="135dp" />

    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="81dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="289dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <Button
            android:id="@+id/button_quatre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/btn_quatre"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_cinq"
            app:layout_constraintTop_toBottomOf="@+id/button_un" />

        <Button
            android:id="@+id/button_cinq"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_cinq"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="290dp" />

        <Button
            android:id="@+id/button_six"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/btn_six"
            app:layout_constraintLeft_toRightOf="@+id/button_cinq"
            tools:layout_editor_absoluteY="290dp" />

        <Button
            android:id="@+id/button_moins"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/btn_moins"
            app:layout_constraintLeft_toRightOf="@+id/button_six"
            tools:layout_editor_absoluteY="290dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="80dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="215dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <Button
            android:id="@+id/button_un"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/btn_un"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_deux"
            tools:layout_editor_absoluteY="204dp" />

        <Button
            android:id="@+id/button_deux"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_deux"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="204dp" />

        <Button
            android:id="@+id/button_trois"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/btn_trois"
            app:layout_constraintLeft_toRightOf="@+id/button_deux"
            tools:layout_editor_absoluteY="204dp" />

        <Button
            android:id="@+id/button_plus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/btn_plus"
            app:layout_constraintLeft_toRightOf="@+id/button_trois"
            tools:layout_editor_absoluteY="204dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="87dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="370dp">

        <Button
            android:id="@+id/button_sept"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/btn_sept"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_quatre" />

        <Button
            android:id="@+id/button_neuf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/btn_neuf"
            app:layout_constraintLeft_toRightOf="@+id/button_huit"
            app:layout_constraintTop_toBottomOf="@+id/button_six" />

        <Button
            android:id="@+id/button_huit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/btn_huit"
            app:layout_constraintLeft_toRightOf="@+id/button_sept"
            app:layout_constraintTop_toBottomOf="@+id/button_cinq" />

        <Button
            android:id="@+id/button_diviser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/btn_diviser"
            app:layout_constraintHorizontal_bias="0.206"
            app:layout_constraintLeft_toRightOf="@+id/button_neuf"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_moins" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="42dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="465dp"
        tools:layout_editor_absoluteX="8dp">

        <Button
            android:id="@+id/button_clear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="CLEAR" />

        <Button
            android:id="@+id/button_pop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="POP" />

        <Button
            android:id="@+id/button_swap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="SWAP" />

        <Button
            android:id="@+id/button_enter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="ENTER" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
